# ST_Render

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Render_Propmt.md  SOFTWARE_RENDERER_PLAN.md  prompt.txt
Buffer/: CMakeLists.txt  DepthBuffer.hpp  FrameBuffer.hpp
Data/: CMakeLists.txt
Data/DataBase/: CMakeLists.txt  SceneData.cpp  SceneData.hpp
Data/ScenePrefab/: main.scene  test.scene  test2.scene  test3.scene
Docs/: BUILD.md  BUILD_TOOLS_REFERENCE.md  README.md  TROUBLESHOOTING.md
Docs/architecture/: ST_Render架构.md  TextureManager架构.md
Docs/plan/: DEBUG_2D_SCENE_PLAN.md  TEST_MANAGER_PLAN.md
Docs/rendering/: 3d-culling-bugs.md
Editor/: AudioManager.cpp  CMakeLists.txt  Cinemachine.cpp  Cinemachine.hpp  CinemachineUI.hpp  GameObject.cpp  GameObject.hpp  ITransformUI.hpp  MusicPlayer.cpp  MusicPlayer.hpp  MusicPlayerUI.hpp  Scene.cpp  Scene.hpp  Script.cpp  Sprite2D.cpp  Sprite2D.hpp  Sprite2DUI.hpp  TextureManager.cpp  TextureManager.hpp  TransformUI_ImGui.hpp
Editor/NetWork/: NetworkDiscovery.cpp  NetworkDiscovery.hpp
Editor/Scripts/: Registration.cpp  TestScript.cpp  TestScript.hpp  WASDMovement.cpp  WASDMovement.hpp
Editor/UI/: UIBase.cpp  UIButton.hpp  UIEditorPanel.cpp  UIPanel.cpp  UIPanel.hpp
FucModule/Music/: CMakeLists.txt  MusicManager.cpp  MusicManager.hpp
Geometry/: CMakeLists.txt  Mesh.hpp  Triangle.hpp
Main/: CMakeLists.txt  ITestModule.hpp  TestManager.cpp  TestManager.hpp  TestModule_2D_Scene.cpp  TestModule_2D_Scene.hpp  TestModule_FrameBuffer.cpp  TestModule_FrameBuffer.hpp  TestModule_Music.cpp  TestModule_NetworkTest.cpp  TestModule_NetworkTest.hpp  TestModule_Rasterizer.hpp  TestModule_Sprite2D.cpp  TestModule_Sprite2D.hpp  TestModule_Texture.cpp  TestModule_Texture.hpp  TestModule_VertexShader.cpp  TestModule_VertexShader.hpp  imgui_impl_sdl2.h  test_buffer.cpp  test_camera.cpp  test_geometry.cpp  test_main.cpp  test_manager_main.cpp  test_math.cpp  test_pipeline.cpp  test_renderer.cpp  test_sdl_circle.cpp  test_sdl_main.cpp  test_sdl_window.cpp  test_transform.cpp  test_transform.hpp
Pipeline/: CMakeLists.txt  FragmentShader.cpp  FragmentShader.hpp  Rasterizer.hpp
Renderer/: Renderer.cpp  Renderer.hpp
Texture/: CMakeLists.txt  ST_Image.cpp  ST_Image.hpp
Transform/: CMakeLists.txt
buffer/: FrameBuffer.hpp  Texture2D.hpp
camera/: CMakeLists.txt  Camera.hpp
document/: Scene2D架构.md
geometry/: Mesh.cpp  Vertex.hpp
math/: CMakeLists.txt  MathUtils.hpp  Matrix4x4.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
pipeline/: VertexShader.hpp
renderer/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/main/: CMakeLists.txt  HierarchyPanel.cpp  HierarchyPanel.hpp  ITestModule.hpp  TestModule_2D_Scene.cpp  TestModule_2D_Scene.hpp  TestModule_3DRender.cpp  TestModule_3DRender.hpp  TestModule_Circle.hpp  TestModule_DragWindow.hpp  TestModule_FrameBuffer.hpp  TestModule_Music.cpp  TestModule_Music.hpp  TestModule_NetworkTest.cpp  TestModule_NetworkTest.hpp  TestModule_Rasterizer.cpp  TestModule_Rasterizer.hpp  TestModule_Rectangle.hpp  TestModule_ReviewAlpha.hpp  TestModule_ReviewDelta.hpp  TestModule_ReviewGamma.hpp  TestModule_Sprite2D.cpp  TestModule_Sprite2D.hpp  TestModule_Texture.cpp  TestModule_Texture.hpp  TestModule_VertexShader.hpp  TestRegistry.hpp  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h  test_3d_dump.cpp  test_buffer.cpp  test_buffer.hpp  test_camera.cpp  test_camera.hpp  test_geometry.cpp  test_geometry.hpp  test_manager_main.cpp  test_math.cpp  test_math.hpp  (+7 more)
src/app/module/: IModule.hpp
src/app/module/review/: MathReview_ColorAndUtilsTests.hpp  MathReview_Harness.hpp  MathReview_MatrixTests.hpp  MathReview_VectorTests.hpp  TestModule_ReviewAlpha.cpp  TestModule_ReviewBeta.cpp  TestModule_ReviewBeta.hpp  TestModule_ReviewDelta.cpp  TestModule_ReviewGamma.cpp  TestModule_ReviewMath.cpp  TestModule_ReviewMath.hpp
src/engine/: CMakeLists.txt
src/engine/editor/: AudioManager.cpp  AudioManager.hpp  CMakeLists.txt  Cinemachine.cpp  Cinemachine.hpp  CinemachineUI.hpp  GameObject.cpp  GameObject.hpp  ITransformUI.hpp  MusicPlayer.cpp  MusicPlayer.hpp  MusicPlayerUI.hpp  OrbitCameraController.hpp  Scene.cpp  Scene.hpp  Script.cpp  Script.hpp  ScriptUI.hpp  Sprite2D.cpp  Sprite2D.hpp  Sprite2DUI.hpp  TextureManager.cpp  TextureManager.hpp  TransformUI_ImGui.hpp
src/engine/editor/UI/: UIBase.hpp  UIButton.cpp  UICanvas.hpp  UIEditorPanel.hpp  UIImage.cpp  UIImage.hpp  UILabel.cpp  UILabel.hpp  UISystem.hpp  UIWidget.cpp  UIWidget.hpp
src/modules/: CMakeLists.txt
src/modules/music/: CMakeLists.txt  MusicManager.cpp
src/renderer/: CMakeLists.txt
src/renderer/buffer/: CMakeLists.txt  FrameBuffer.hpp  Texture2D.hpp
src/renderer/geometry/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  Triangle.hpp  Vertex.hpp
src/renderer/pipeline/: CMakeLists.txt  FragmentShader.cpp  FragmentShader.hpp  Rasterizer.hpp  VertexShader.hpp
src/renderer/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp
src/renderer/transform/: CMakeLists.txt  Transform.hpp
transform/: Transform.hpp
